Bug#33688   "Falcon: replication fails on duplicate key error"   I was able to reproduce this bug on InnoDB storage engine simply by   removing table flag HA_BINLOG_STMT_CAPABLE.   Bug affects any transactional storage engine which does not use statement   based logs and is caused by thd->binlog_table_maps not being reset when   rollback occurs.